# ML_4_JetTagging

./: CMakeLists.txt  README.md  config.yaml  env.sh  main.cpp
core/: chain2csv.py  training.py
default_xgb/: metrics.json  xgb_model.json
inc/: Bdtrain.h  branch_info.h  config_reader.h
src/: Bdtrain.cpp  config_reader.cpp
utils/: plot_utils_mix.py
